# matrixgen_c_u_pp

./: .gitignore  CMakeLists.txt  README.md  visualize_matrix.py
include/formats/: cuda_matrix_formats.cuh  matrix_formats.hpp
include/io/: matrix_market.hpp  matrix_visualizer.hpp
include/kernels/: lanczos.cuh  lanczos.hpp
include/utils/: cuda_matrix_utils.cuh  cuda_utils.cuh  timer.hpp
src/: main.cpp  main.cu  test_real_matrices.cu
src/cpu/: lanczos.cpp  reference_impl.cpp
src/gpu/: gpu_utils.cu  lanczos.cu  lanczos_sparse.cu  lanczos_sparse2.cu  lanczos_sparse3.cu
